[project]
name = "sdf_pipeline"
version = "1.3.0"
requires-python = ">=3.11"
dependencies = ["pydantic == 2.7.1"]

[project.optional-dependencies]
invariance-tests = ["rdkit == 2023.9.6"]
development = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"